--- a/endPoints/adminEndPoint/views/admin-post-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-post-page/index.ejs
@@ -53,6 +53,7 @@
 				<div>
 					<div>
 						<img
+							logo
 							draggable="false"
 							src="<%= builder.header.logo %>"
 							alt="<%= builder.header.title %> Logo"
@@ -75,6 +76,7 @@
 				<!--logo-->
 				<a href="/">
 					<img
+			 			logo
 						draggable="false"
 						src="<%= builder.header.logo %>"
 						alt="<%= builder.header.title %> Logo"
@@ -94,18 +96,67 @@
 		<main>
 
 			<!--overview-->
-			<div class="section-container">
+			<div class="table-section-container">
 
 				<!--title-->
 				<div>
 					<h1>
-						<i class="fa-solid fa-tag"></i>
-						Overview
+						<i class="fa-solid fa-helmet-safety"></i>
+						Header
 					</h1>
 				</div>
 
-				<!--content-->
-				<div class="section-container__statistics-container">
+				<!--table-->
+				<div class="table-section-container__table-container">
+
+					<table>
+						<thead>
+							<th>
+								Icon
+							</th>
+							<th>
+								Logo
+							</th>
+						</thead>
+						<tbody>
+
+							<!--icon-->
+							<td>
+								<div cell class="cell" action="/admin/api/header/icon" method="PUT" identifier="only" for="icon"> 
+									<div file-input class="cell__file-input-container">
+										<label for="icon">
+											<i class="fa-solid fa-image"></i>
+										</label>
+										<input id="icon" type="file" accept="image/*" />
+										<a target="_blank">Icon</a>
+									</div>
+									<div info class="cell__info-container">
+										<i class="cell__info-container__loading"></i>
+										<i info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+										<i class="fa-solid fa-circle-check"></i>
+									</div>
+								</div>
+							</td>
+
+							<!--logo-->
+							<td>
+								<div cell class="cell" action="/admin/api/header/logo" method="PUT" identifier="only" for="logo">
+									<div file-input class="cell__file-input-container">
+										<label for="logo">
+											<i class="fa-solid fa-image"></i>
+										</label>
+										<input id="logo" type="file" accept="image/*" />
+										<a target="_blank">Logo</a>
+									</div>
+									<div info class="cell__info-container">
+										<i class="cell__info-container__loading"></i>
+										<i info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+										<i class="fa-solid fa-circle-check"></i>
+									</div>
+								</div>
+							</td>
+						</tbody>
+					</table>
 					
 				</div>
 
