--- a/endPoints/rootEndPoint/views/root-get-page/styles/header/header.scss
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/header/header.scss
@@ -78,6 +78,15 @@ div.search-container {
 	&.--on {
 		& > input {
 			border-radius: 7px 7px 0px 0px;
+			border: 1px solid lightgray;
+			border-bottom: 1px solid transparent;
+		}
+
+		& > div {
+			& > div {
+				border: 1px solid lightgray;
+				border-top: 1px solid transparent;
+			}
 		}
 	}
 
