--- a/endPoints/adminEndPoint/views/admin-post-page/styles/modules/modules.scss
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/modules/modules.scss
@@ -35,14 +35,17 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			padding: 42px 21px 35px 21px;
+			padding: 35px 21px;
 			width: 100%;
 			background-color: var(--primary-color);
 
 			& > div {
+				min-width: 70%;
+				text-align: center;
+
 				& > img {
 					@extend %default-height-size !optional;
-					filter: grayscale(100%) brightness(200%);
+					filter: grayscale(100%) brightness(0) invert(1);
 				}
 
 				& > div {
@@ -58,7 +61,7 @@
 					}
 
 					width: 100%;
-					margin-top: 35px;
+					margin-top: 28px;
 					position: relative;
 
 					p {
@@ -82,6 +85,15 @@
 			padding: 21px 21px 224px 21px;
 			overflow-y: scroll;
 			height: 100%;
+		}
+	}
+}
+
+@media (min-width: 1700px) {
+	%aside-menu {
+		& > div {
+			width: 322px;
+			min-width: 322px;
 		}
 	}
 }
