--- a/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.css
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.css
@@ -69,22 +69,22 @@ div.table-section-container__table-container > table {
   border-radius: 7px;
   overflow: hidden;
 }
+div.table-section-container__table-container > table thead,
+div.table-section-container__table-container > table tbody {
+  background-color: var(--primary-color);
+  font-size: 14px;
+}
 div.table-section-container__table-container > table > thead {
   user-select: none;
-  background-color: var(--primary-color);
   height: 41px;
   color: white;
 }
-div.table-section-container__table-container > table > tbody {
-  background-color: white;
+div.table-section-container__table-container > table > tbody > tr {
   height: 48px;
 }
-div.table-section-container__table-container > table > tbody td {
-  min-width: 301px;
-}
-div.table-section-container__table-container > table thead,
-div.table-section-container__table-container > table tbody {
-  font-size: 14px;
+div.table-section-container__table-container > table > tbody > tr > td {
+  min-width: 280px;
+  background-color: white;
 }
 
 div.cell {
@@ -133,7 +133,7 @@ div.cell__file-input-container {
   gap: 7px;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: auto;
 }
 div.cell__file-input-container label {
   color: var(--primary-color);
@@ -147,6 +147,23 @@ div.cell__file-input-container a {
   max-width: 140px;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+div.cell__text-input-container {
+  display: flex;
+  gap: 7px;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+}
+div.cell__text-input-container input {
+  width: 100%;
+  text-align: center;
+  border: 0px;
+  font-size: 15.4px;
+}
+div.cell__text-input-container input:focus {
+  outline: none;
 }
 
 @keyframes spinner {
