--- a/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.scss
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.scss
@@ -35,25 +35,27 @@ div.table-section-container__table-container {
 		border-radius: 7px;
 		overflow: hidden;
 
+		thead,
+		tbody {
+			background-color: var(--primary-color);
+			font-size: 14px;
+		}
+
 		& > thead {
 			user-select: none;
-			background-color: var(--primary-color);
 			height: 41px;
 			color: white;
 		}
 
 		& > tbody {
-			background-color: white;
-			height: 48px;
+			& > tr {
+				height: 48px;
 
-			td {
-				min-width: 301px;
+				& > td {
+					min-width: 280px;
+					background-color: white;
+				}
 			}
-		}
-
-		thead,
-		tbody {
-			font-size: 14px;
 		}
 	}
 }
@@ -118,7 +120,7 @@ div.cell__file-input-container {
 	gap: 7px;
 	align-items: center;
 	justify-content: center;
-	width: 100%;
+	width: auto;
 
 	label {
 		color: var(--primary-color);
@@ -134,6 +136,25 @@ div.cell__file-input-container {
 		max-width: 140px;
 		overflow: hidden;
 		text-overflow: ellipsis;
+	}
+}
+
+div.cell__text-input-container {
+	display: flex;
+	gap: 7px;
+	align-items: center;
+	justify-content: center;
+	width: auto;
+
+	input {
+		&:focus {
+			outline: none;
+		}
+
+		width: 100%;
+		text-align: center;
+		border: 0px;
+		font-size: 15.4px;
 	}
 }
 
