--- a/endPoints/adminEndPoint/views/error-get-page/styles/header/header.css
+++ b/endPoints/adminEndPoint/views/error-get-page/styles/header/header.css
@@ -1,15 +1,10 @@
 header > div:first-of-type > a > img:first-of-type {
-  height: 17.5px;
+  height: 28px;
 }
 
-@media (min-width: 870px) {
+@media (min-width: 1300px) {
   header > div:first-of-type > a > img:first-of-type {
-    height: 18.9px;
-  }
-}
-@media (min-width: 1700px) {
-  header > div:first-of-type > a > img:first-of-type {
-    height: 21px;
+    height: 31.5px;
   }
 }
 header {
@@ -30,10 +25,10 @@ header > div:first-of-type {
 }
 header > div:first-of-type > a {
   display: flex;
-  padding: 14px 0px;
+  padding: 7px 0px;
 }
 header > div:first-of-type > a > img:first-of-type {
-  filter: grayscale(100%) brightness(200%);
+  filter: grayscale(100%) brightness(0) invert(1);
 }
 
 /*# sourceMappingURL=header.css.map */
