--- a/endPoints/rootEndPoint/views/root-get-page/styles/loading-screen/loading-screen.scss
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/loading-screen/loading-screen.scss
@@ -31,7 +31,7 @@ div.loading-screen-container {
 
 		& > img {
 			@extend %default-height-size;
-			filter: grayscale(100%) brightness(200%);
+			filter: grayscale(100%) brightness(0) invert(1);
 		}
 
 		& > hr {
