--- a/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.css
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.css
@@ -74,7 +74,12 @@ div.table-section-container__table-container > table tbody {
   background-color: var(--primary-color);
   font-size: 14px;
 }
+div.table-section-container__table-container > table thead tr,
+div.table-section-container__table-container > table tbody tr {
+  width: min-content;
+}
 div.table-section-container__table-container > table > thead {
+  width: 100%;
   user-select: none;
   height: 41px;
   color: white;
@@ -92,7 +97,6 @@ div.cell {
   gap: 14px;
   align-items: center;
   justify-content: center;
-  padding: 0px 28px;
   position: relative;
 }
 div.cell > div.cell__info-container {
@@ -128,13 +132,14 @@ div.cell > div.cell__info-container > i:last-of-type {
   color: var(--regular-green);
 }
 
-div.cell__file-input-container {
+div.cell__input-container {
   display: flex;
   gap: 7px;
   align-items: center;
   justify-content: center;
-  width: auto;
+  width: 100%;
 }
+
 div.cell__file-input-container label {
   color: var(--primary-color);
   cursor: pointer;
@@ -149,21 +154,35 @@ div.cell__file-input-container a {
   text-overflow: ellipsis;
 }
 
-div.cell__text-input-container {
-  display: flex;
-  gap: 7px;
-  align-items: center;
-  justify-content: center;
-  width: auto;
-}
 div.cell__text-input-container input {
-  width: 100%;
+  width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: center;
   border: 0px;
   font-size: 15.4px;
 }
 div.cell__text-input-container input:focus {
   outline: none;
+}
+
+div.cell__color-input-container input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 48px;
+  height: 35px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+div.cell__color-input-container input::-webkit-color-swatch {
+  border-radius: 7px;
+  border: none;
+}
+div.cell__color-input-container input::-moz-color-swatch {
+  border-radius: 7px;
+  border: none;
 }
 
 @keyframes spinner {
