--- a/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.scss
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.scss
@@ -14,6 +14,7 @@ div.table-section-container {
 		& > h1 {
 			@extend %big-font-size;
 			color: var(--dark-gray);
+			padding: 7px 0px;
 
 			& > i {
 				color: var(--primary-color);
@@ -54,7 +55,7 @@ div.table-section-container__table-container {
 
 		& > tbody {
 			& > tr {
-				height: 48px;
+				height: 52.5px;
 
 				& > td {
 					min-width: 280px;
@@ -146,17 +147,38 @@ div.cell__file-input-container {
 }
 
 div.cell__text-input-container {
-	input {
+	div[pseudo-input] {
+		&:empty:before {
+			content: attr(placeholder);
+			color: gray;
+		}
+
 		&:focus {
 			outline: none;
 		}
 
-		width: 80%;
-		overflow: hidden;
-		text-overflow: ellipsis;
+		width: 100%;
+		padding: 0px 21px;
 		text-align: center;
-		border: 0px;
-		font-size: 15.4px;
+	}
+}
+
+div.cell__text-area-container {
+	justify-content: left;
+
+	textarea {
+		&:focus {
+			outline: none;
+		}
+
+		padding: 14px;
+		width: 100%;
+		min-width: 100%;
+		max-width: 100%;
+		font-size: 14px;
+		height: 52.5px;
+		border: none;
+		text-align: center;
 	}
 }
 
