--- a/endPoints/rootEndPoint/views/error-get-page/styles/header/header.css
+++ b/endPoints/rootEndPoint/views/error-get-page/styles/header/header.css
@@ -1,8 +1,13 @@
 header > div:first-of-type > a > img:first-of-type {
-  height: 28px;
+  height: 25.2px;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 650px) {
+  header > div:first-of-type > a > img:first-of-type {
+    height: 28px;
+  }
+}
+@media (min-width: 870px) {
   header > div:first-of-type > a > img:first-of-type {
     height: 31.5px;
   }
