--- a/endPoints/rootEndPoint/views/root-get-page/styles/loading-screen/loading-screen.css
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/loading-screen/loading-screen.css
@@ -1,8 +1,13 @@
 div.loading-screen-container > div > img {
-  height: 28px;
+  height: 25.2px;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 650px) {
+  div.loading-screen-container > div > img {
+    height: 28px;
+  }
+}
+@media (min-width: 870px) {
   div.loading-screen-container > div > img {
     height: 31.5px;
   }
@@ -35,18 +40,22 @@ div.loading-screen-container > div.--on {
   filter: opacity(100%);
 }
 div.loading-screen-container > div > img {
+  transform: scale(114%, 114%);
   filter: grayscale(100%) brightness(0) invert(1);
-}
-div.loading-screen-container > div > hr {
-  display: block;
-  width: 0%;
-  height: 2.8px;
-  background-color: white;
-  transition: ease-in-out 1.5s;
-  border-radius: 70px;
-  border: none;
+  animation: loadingImage infinite 7s;
 }
 
+@keyframes loadingImage {
+  80% {
+    opacity: 100%;
+  }
+  90% {
+    opacity: 41%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
 @media only screen and (pointer: coarse) {
   div.loading-screen-container > div {
     transform: translateY(-150%);
