--- a/endPoints/adminEndPoint/views/admin-post-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-post-page/index.ejs
@@ -28,6 +28,7 @@
 			}
 		</style>
 		<link rel="stylesheet" href="/admin-post-page/styles/index/index.css" />
+		<link rel="stylesheet" href="/admin-post-page/styles/warning/warning.css" />
 		<link rel="stylesheet" href="/admin-post-page/styles/aside/aside.css" />
 		<link rel="stylesheet" href="/admin-post-page/styles/header/header.css" />
 		<link rel="stylesheet" href="/admin-post-page/styles/main/main.css" />
@@ -46,6 +47,22 @@
 	</head>
 	<body>
 
+		<!--warning-->
+		<div warning class="warning-container">
+			<div>
+				<h2>
+					<i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+					Multi-Window
+				</h2>
+				<p>
+					Admin page is open in another window. Click "Use Here" to use Admin page in this window.
+				</p>
+				<div>
+					<button>USE HERE</button>
+				</div>
+			</div>
+		</div>
+
 		<!--aside-menu-->
 		<aside settings-aside-menu>
 			<button close-settings-aside-menu-button></button>
@@ -63,9 +80,7 @@
 						</div>
 					</div>
 				</div>
-				<div>
-					<!--content-->
-				</div>
+				<div></div>
 			</div>
 		</aside>
 
@@ -95,10 +110,9 @@
 		<!--main-->
 		<main>
 
-			<!--overview-->
+			<!--Header-->
 			<div class="table-section-container">
 
-				<!--title-->
 				<div>
 					<h1>
 						<i class="fa-solid fa-helmet-safety"></i>
@@ -124,17 +138,17 @@
 
 								<!--icon-->
 								<td>
-									<div cell class="cell" action="/admin/api/header/icon" method="PUT" identifier="only" for="icon"> 
-										<div file-input-container class="cell__input-container cell__file-input-container">
+									<div cell-container class="cell-container" action="/admin/api/header/icon"  identifier="only" for="icon"> 
+										<div file-input-container class="cell-container__input-container cell-container__file-input-container">
 											<label for="icon">
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="icon" type="file" accept="image/*" />
 											<a href="<%= builder.header.icon %>" target="_blank">Icon</a>
 										</div>
-										<div info class="cell__info-container">
-											<i class="cell__info-container__loading"></i>
-											<i info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+										<div cell-info class="cell-container__cell-info-container">
+											<i class="cell-container__cell-info-container__loading"></i>
+											<i cell-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
 											<i class="fa-solid fa-circle-check"></i>
 										</div>
 									</div>
@@ -142,17 +156,17 @@
 
 								<!--logo-->
 								<td>
-									<div cell class="cell" action="/admin/api/header/logo" method="PUT" identifier="only" for="logo">
-										<div file-input-container class="cell__input-container cell__file-input-container">
+									<div cell-container class="cell-container" action="/admin/api/header/logo"  identifier="only" for="logo">
+										<div file-input-container class="cell-container__input-container cell-container__file-input-container">
 											<label for="logo">
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="logo" type="file" accept="image/*" />
 											<a href="<%= builder.header.logo %>" target="_blank">Logo</a>
 										</div>
-										<div info class="cell__info-container">
-											<i class="cell__info-container__loading"></i>
-											<i info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+										<div cell-info class="cell-container__cell-info-container">
+											<i class="cell-container__cell-info-container__loading"></i>
+											<i cell-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
 											<i class="fa-solid fa-circle-check"></i>
 										</div>
 									</div>
@@ -180,15 +194,15 @@
 
 								<!--Title-->
 								<td>
-									<div cell class="cell" action="/admin/api/header/title" method="PUT" identifier="only" for="title"> 
-										<div class="cell__input-container cell__text-input-container">
+									<div cell-container class="cell-container" action="/admin/api/header/title"  identifier="only" for="title"> 
+										<div class="cell-container__input-container cell-container__text-input-container">
 											<div pseudo-input contenteditable="true" placeholder="Title" maxlength="30">
 												<%= builder.header.title %>
 											</div>
 										</div>
-										<div info class="cell__info-container">
-											<i class="cell__info-container__loading"></i>
-											<i info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+										<div cell-info class="cell-container__cell-info-container">
+											<i class="cell-container__cell-info-container__loading"></i>
+											<i cell-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
 											<i class="fa-solid fa-circle-check"></i>
 										</div>
 									</div>
@@ -196,13 +210,13 @@
 
 								<!--Color-->
 								<td>
-									<div cell class="cell" action="/admin/api/header/color" method="PUT" identifier="only" for="color">
-										<div class="cell__input-container cell__color-input-container">
+									<div cell-container class="cell-container" action="/admin/api/header/color"  identifier="only" for="color">
+										<div class="cell-container__input-container cell-container__color-input-container">
 											<input type="color" value="<%= builder.header.color %>"/>
 										</div>									
-										<div info class="cell__info-container">
-											<i class="cell__info-container__loading"></i>
-											<i info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+										<div cell-info class="cell-container__cell-info-container">
+											<i class="cell-container__cell-info-container__loading"></i>
+											<i cell-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
 											<i class="fa-solid fa-circle-check"></i>
 										</div>
 									</div>
@@ -227,13 +241,13 @@
 
 								<!--Description-->
 								<td>
-									<div cell class="cell" action="/admin/api/header/description" method="PUT" identifier="only" for="description"> 
-										<div class="cell__input-container cell__text-area-container">
+									<div cell-container class="cell-container" action="/admin/api/header/description"  identifier="only" for="description"> 
+										<div class="cell-container__input-container cell-container__text-area-container">
 											<textarea maxlength="255"><%= builder.header.description %></textarea>
 										</div>
-										<div info class="cell__info-container">
-											<i class="cell__info-container__loading"></i>
-											<i info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+										<div cell-info class="cell-container__cell-info-container">
+											<i class="cell-container__cell-info-container__loading"></i>
+											<i cell-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
 											<i class="fa-solid fa-circle-check"></i>
 										</div>
 									</div>
@@ -242,7 +256,104 @@
 						</tbody>
 					</table>
 				</div>
+			</div>
 
+			<!--Propagandas-->
+			<div special-section class="table-section-container">
+
+				<div>
+					<h1>
+						<i class="fa-solid fa-thumbtack"></i>
+						Propagandas
+					</h1>
+				</div>
+
+				<div table-container class="table-section-container__table-container">
+					<table>
+						<thead>
+							<tr>
+								<th>
+									Big Image
+								</th>
+								<th>
+									Small Image
+								</th>
+								<th>
+									Actions
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+
+							<template>
+								<tr table-row>
+
+									<!--Big-Image-->
+									<td>
+										<div cell-container class="cell-container"> 
+											<div file-input-container class="cell-container__input-container cell-container__file-input-container">
+												<label>
+													<i class="fa-solid fa-image"></i>
+												</label>
+												<input type="file" accept="image/*" />
+												<a target="_blank">Big Image</a>
+											</div>
+											<div cell-info class="cell-container__cell-info-container">
+												<i class="cell-container__cell-info-container__loading"></i>
+												<i cell-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+												<i class="fa-solid fa-circle-check"></i>
+											</div>
+										</div>
+									</td>
+
+									<!--Small-Image-->
+									<td>
+										<div cell-container class="cell-container"> 
+											<div file-input-container class="cell-container__input-container cell-container__file-input-container">
+												<label>
+													<i class="fa-solid fa-image"></i>
+												</label>
+												<input type="file" accept="image/*" />
+												<a target="_blank">Small Image</a>
+											</div>
+											<div cell-info class="cell-container__cell-info-container">
+												<i class="cell-container__cell-info-container__loading"></i>
+												<i cell-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+												<i class="fa-solid fa-circle-check"></i>
+											</div>
+										</div>
+									</td>
+
+									<!--Actions-->
+									<td action-container class="action-container">
+										<div>
+											<div>
+												<button>
+													<i class="fa-sharp fa-solid fa-paper-plane"></i>
+												</button>
+												<button>
+													<i class="fa-solid fa-trash"></i>
+												</button>
+												<div action-info class="action-container__action-info-container">
+													<i class="action-container__cell-info-container__loading"></i>
+													<i action-info-error class="fa-sharp fa-solid fa-circle-exclamation"></i>
+													<i class="fa-solid fa-circle-check"></i>											
+												</div>
+											</div>
+										</div>
+									</td>
+								</tr>
+							</template>
+						</tbody>
+					</table>
+				</div>
+
+				<div>
+					<button add-item-to-table-button>
+						<i class="fa-solid fa-thumbtack"></i>
+						Add Propaganda
+					</button>
+				</div>
 			</div>
 
 		</main>
