--- a/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.css
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.css
@@ -1,4 +1,4 @@
-div.table-section-container__table-container, div.table-section-container > div:first-of-type {
+div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
   padding-right: 21px;
   padding-left: 21px;
 }
@@ -8,13 +8,13 @@ div.table-section-container > div:first-of-type > h1 {
 }
 
 @media (min-width: 375px) {
-  div.table-section-container__table-container, div.table-section-container > div:first-of-type {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
     padding-right: 28px;
     padding-left: 28px;
   }
 }
 @media (min-width: 650px) {
-  div.table-section-container__table-container, div.table-section-container > div:first-of-type {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
     padding-right: 56px;
     padding-left: 56px;
   }
@@ -25,37 +25,50 @@ div.table-section-container > div:first-of-type > h1 {
   }
 }
 @media (min-width: 1300px) {
-  div.table-section-container__table-container, div.table-section-container > div:first-of-type {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
     padding-right: 15.4vw;
     padding-left: 15.4vw;
   }
 }
 @media (min-width: 1700px) {
-  div.table-section-container__table-container, div.table-section-container > div:first-of-type {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
     padding-right: 21vw;
     padding-left: 21vw;
   }
 }
 @media (min-width: 2880px) {
-  div.table-section-container__table-container, div.table-section-container > div:first-of-type {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
     padding-right: 30%;
     padding-left: 30%;
   }
 }
 main {
-  padding: 84px 0px;
+  padding: 119px 0px;
   background-color: var(--light-gray);
 }
 
 div.table-section-container {
-  padding: 70px 0px;
+  padding: 35px 0px;
 }
 div.table-section-container > div:first-of-type > h1 {
   color: var(--dark-gray);
-  padding: 7px 0px;
+  padding: 14px 0px;
 }
 div.table-section-container > div:first-of-type > h1 > i {
   color: var(--primary-color);
+}
+div.table-section-container > div:last-of-type {
+  padding-top: 7px;
+}
+div.table-section-container > div:last-of-type > button {
+  gap: 7px;
+  font-family: var(--font-bold);
+  background-color: var(--regular-green);
+  color: white;
+  width: 100%;
+  font-size: 15.4px;
+  padding: 14px;
+  border-radius: 7px;
 }
 
 div.table-section-container__table-container {
@@ -63,6 +76,9 @@ div.table-section-container__table-container {
   padding-bottom: 14px;
   width: 100%;
   overflow-x: scroll;
+}
+div.table-section-container__table-container.--off {
+  display: none;
 }
 div.table-section-container__table-container > table {
   width: 100%;
@@ -93,32 +109,32 @@ div.table-section-container__table-container > table > tbody > tr > td {
   background-color: white;
 }
 
-div.cell {
+div.cell-container {
   display: flex;
   gap: 14px;
   align-items: center;
   justify-content: center;
   position: relative;
 }
-div.cell > div.cell__info-container {
+div.cell-container > div.cell-container__cell-info-container {
   transform: translateY(-50%);
   position: absolute;
   top: 50%;
-  right: 28px;
+  right: 17.5px;
 }
-div.cell > div.cell__info-container.--loading i.cell__info-container__loading {
+div.cell-container > div.cell-container__cell-info-container.--loading i.cell-container__cell-info-container__loading {
   display: block;
 }
-div.cell > div.cell__info-container.--error i:nth-of-type(2) {
+div.cell-container > div.cell-container__cell-info-container.--error i:nth-of-type(2) {
   display: block;
 }
-div.cell > div.cell__info-container.--ok i:last-of-type {
+div.cell-container > div.cell-container__cell-info-container.--ok i:last-of-type {
   display: block;
 }
-div.cell > div.cell__info-container i {
+div.cell-container > div.cell-container__cell-info-container i {
   display: none;
 }
-div.cell > div.cell__info-container i.cell__info-container__loading {
+div.cell-container > div.cell-container__cell-info-container i.cell-container__cell-info-container__loading {
   width: 16.1px;
   height: 16.1px;
   border-radius: 100%;
@@ -126,14 +142,14 @@ div.cell > div.cell__info-container i.cell__info-container__loading {
   border-top: 2.8px solid transparent;
   animation: spinner 1.4s linear infinite forwards;
 }
-div.cell > div.cell__info-container > i:nth-of-type(2) {
+div.cell-container > div.cell-container__cell-info-container > i:nth-of-type(2) {
   color: red;
 }
-div.cell > div.cell__info-container > i:last-of-type {
+div.cell-container > div.cell-container__cell-info-container > i:last-of-type {
   color: var(--regular-green);
 }
 
-div.cell__input-container {
+div.cell-container__input-container {
   display: flex;
   gap: 7px;
   align-items: center;
@@ -141,51 +157,47 @@ div.cell__input-container {
   width: 100%;
 }
 
-div.cell__file-input-container label {
+div.cell-container__file-input-container label {
   color: var(--primary-color);
   cursor: pointer;
 }
-div.cell__file-input-container input {
+div.cell-container__file-input-container input {
   display: none;
 }
-div.cell__file-input-container a {
+div.cell-container__file-input-container a {
   white-space: nowrap;
   max-width: 140px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-div.cell__text-input-container div[pseudo-input] {
+div.cell-container__text-input-container div[pseudo-input] {
   width: 100%;
   padding: 0px 21px;
   text-align: center;
 }
-div.cell__text-input-container div[pseudo-input]:empty:before {
+div.cell-container__text-input-container div[pseudo-input]:empty:before {
   content: attr(placeholder);
   color: gray;
 }
-div.cell__text-input-container div[pseudo-input]:focus {
+div.cell-container__text-input-container div[pseudo-input]:focus {
   outline: none;
 }
 
-div.cell__text-area-container {
-  justify-content: left;
-}
-div.cell__text-area-container textarea {
+div.cell-container__text-area-container textarea {
   padding: 14px;
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  font-size: 14px;
+  width: 80%;
+  resize: none;
+  font-size: 15.4px;
   height: 52.5px;
   border: none;
   text-align: center;
 }
-div.cell__text-area-container textarea:focus {
+div.cell-container__text-area-container textarea:focus {
   outline: none;
 }
 
-div.cell__color-input-container input {
+div.cell-container__color-input-container input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -195,13 +207,63 @@ div.cell__color-input-container input {
   border: none;
   cursor: pointer;
 }
-div.cell__color-input-container input::-webkit-color-swatch {
+div.cell-container__color-input-container input::-webkit-color-swatch {
   border-radius: 7px;
   border: none;
 }
-div.cell__color-input-container input::-moz-color-swatch {
+div.cell-container__color-input-container input::-moz-color-swatch {
   border-radius: 7px;
   border: none;
+}
+
+td.action-container > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+td.action-container > div > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  width: 112px;
+  position: relative;
+}
+td.action-container > div > div > button {
+  color: var(--primary-color);
+  font-size: 16.8px;
+}
+td.action-container > div > div > div.action-container__action-info-container {
+  transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  right: 0px;
+}
+td.action-container > div > div > div.action-container__action-info-container.--loading i.action-container__cell-info-container__loading {
+  display: block;
+}
+td.action-container > div > div > div.action-container__action-info-container.--error i:nth-of-type(2) {
+  display: block;
+}
+td.action-container > div > div > div.action-container__action-info-container.--ok i:last-of-type {
+  display: block;
+}
+td.action-container > div > div > div.action-container__action-info-container i {
+  display: none;
+}
+td.action-container > div > div > div.action-container__action-info-container i.action-container__cell-info-container__loading {
+  width: 16.1px;
+  height: 16.1px;
+  border-radius: 100%;
+  border: 2.8px solid var(--regular-green);
+  border-top: 2.8px solid transparent;
+  animation: spinner 1.4s linear infinite forwards;
+}
+td.action-container > div > div > div.action-container__action-info-container > i:nth-of-type(2) {
+  color: red;
+}
+td.action-container > div > div > div.action-container__action-info-container > i:last-of-type {
+  color: var(--regular-green);
 }
 
 @keyframes spinner {
@@ -217,7 +279,11 @@ div.cell__color-input-container input::-moz-color-swatch {
   div.table-section-container__table-container > table tbody {
     font-size: 16.8px;
   }
-  div.cell > div:last-of-type i.cell__info-container__loading {
+  i.cell-container__cell-info-container__loading {
+    border: 3.5px solid var(--regular-green);
+    border-top: 3.5px solid transparent;
+  }
+  i.action-container__cell-info-container__loading {
     border: 3.5px solid var(--regular-green);
     border-top: 3.5px solid transparent;
   }
