--- a/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.scss
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/main/main.scss
@@ -1,12 +1,12 @@
 @import '../controller/controller.scss';
 
 main {
-	padding: 84px 0px;
+	padding: 119px 0px;
 	background-color: var(--light-gray);
 }
 
 div.table-section-container {
-	padding: 70px 0px;
+	padding: 35px 0px;
 
 	& > div:first-of-type {
 		@extend %default-padding-size;
@@ -14,16 +14,36 @@ div.table-section-container {
 		& > h1 {
 			@extend %big-font-size;
 			color: var(--dark-gray);
-			padding: 7px 0px;
+			padding: 14px 0px;
 
 			& > i {
 				color: var(--primary-color);
 			}
 		}
 	}
+
+	& > div:last-of-type {
+		@extend %default-padding-size;
+		padding-top: 7px;
+
+		& > button {
+			gap: 7px;
+			font-family: var(--font-bold);
+			background-color: var(--regular-green);
+			color: white;
+			width: 100%;
+			font-size: 15.4px;
+			padding: 14px;
+			border-radius: 7px;
+		}
+	}
 }
 
 div.table-section-container__table-container {
+	&.--off {
+		display: none;
+	}
+
 	@extend %default-padding-size;
 	padding-top: 14px;
 	padding-bottom: 14px;
@@ -66,16 +86,16 @@ div.table-section-container__table-container {
 	}
 }
 
-div.cell {
+div.cell-container {
 	display: flex;
 	gap: 14px;
 	align-items: center;
 	justify-content: center;
 	position: relative;
 
-	& > div.cell__info-container {
+	& > div.cell-container__cell-info-container {
 		&.--loading {
-			i.cell__info-container__loading {
+			i.cell-container__cell-info-container__loading {
 				display: block;
 			}
 		}
@@ -95,13 +115,13 @@ div.cell {
 		transform: translateY(-50%);
 		position: absolute;
 		top: 50%;
-		right: 28px;
+		right: 17.5px;
 
 		i {
 			display: none;
 		}
 
-		i.cell__info-container__loading {
+		i.cell-container__cell-info-container__loading {
 			width: 16.1px;
 			height: 16.1px;
 			border-radius: 100%;
@@ -120,7 +140,7 @@ div.cell {
 	}
 }
 
-div.cell__input-container {
+div.cell-container__input-container {
 	display: flex;
 	gap: 7px;
 	align-items: center;
@@ -128,7 +148,7 @@ div.cell__input-container {
 	width: 100%;
 }
 
-div.cell__file-input-container {
+div.cell-container__file-input-container {
 	label {
 		color: var(--primary-color);
 		cursor: pointer;
@@ -146,7 +166,7 @@ div.cell__file-input-container {
 	}
 }
 
-div.cell__text-input-container {
+div.cell-container__text-input-container {
 	div[pseudo-input] {
 		&:empty:before {
 			content: attr(placeholder);
@@ -163,26 +183,23 @@ div.cell__text-input-container {
 	}
 }
 
-div.cell__text-area-container {
-	justify-content: left;
-
+div.cell-container__text-area-container {
 	textarea {
 		&:focus {
 			outline: none;
 		}
 
 		padding: 14px;
-		width: 100%;
-		min-width: 100%;
-		max-width: 100%;
-		font-size: 14px;
+		width: 80%;
+		resize: none;
+		font-size: 15.4px;
 		height: 52.5px;
 		border: none;
 		text-align: center;
 	}
 }
 
-div.cell__color-input-container {
+div.cell-container__color-input-container {
 	input {
 		-webkit-appearance: none;
 		-moz-appearance: none;
@@ -202,6 +219,74 @@ div.cell__color-input-container {
 	input::-moz-color-swatch {
 		border-radius: 7px;
 		border: none;
+	}
+}
+
+td.action-container {
+	& > div {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		& > div {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 14px;
+			width: 112px;
+			position: relative;
+
+			& > button {
+				color: var(--primary-color);
+				font-size: 16.8px;
+			}
+
+			& > div.action-container__action-info-container {
+				&.--loading {
+					i.action-container__cell-info-container__loading {
+						display: block;
+					}
+				}
+
+				&.--error {
+					i:nth-of-type(2) {
+						display: block;
+					}
+				}
+
+				&.--ok {
+					i:last-of-type {
+						display: block;
+					}
+				}
+
+				transform: translateY(-50%);
+				position: absolute;
+				top: 50%;
+				right: 0px;
+
+				i {
+					display: none;
+				}
+
+				i.action-container__cell-info-container__loading {
+					width: 16.1px;
+					height: 16.1px;
+					border-radius: 100%;
+					border: 2.8px solid var(--regular-green);
+					border-top: 2.8px solid transparent;
+					animation: spinner 1.4s linear infinite forwards;
+				}
+
+				& > i:nth-of-type(2) {
+					color: red;
+				}
+
+				& > i:last-of-type {
+					color: var(--regular-green);
+				}
+			}
+		}
 	}
 }
 
@@ -225,12 +310,13 @@ div.cell__color-input-container {
 		}
 	}
 
-	div.cell {
-		& > div:last-of-type {
-			i.cell__info-container__loading {
-				border: 3.5px solid var(--regular-green);
-				border-top: 3.5px solid transparent;
-			}
-		}
+	i.cell-container__cell-info-container__loading {
+		border: 3.5px solid var(--regular-green);
+		border-top: 3.5px solid transparent;
+	}
+
+	i.action-container__cell-info-container__loading {
+		border: 3.5px solid var(--regular-green);
+		border-top: 3.5px solid transparent;
 	}
 }
